Fix + finish graphic EQ MVP
 * Fix some level computation issues on the backend
 * Work around weird (probably browser or os or my pulseaudio-configuration-related) bug that was cause system audio to get messed up sometimes when equalizer (or other Faust modules) start up
 * Implement UI that displays levels in the EQ UI for each of the bars

--- a/src/graphEditor/nodes/CustomAudio/Equalizer/Equalizer.scss
+++ b/src/graphEditor/nodes/CustomAudio/Equalizer/Equalizer.scss
@@ -15,10 +15,23 @@ svg.equalizer {
     font-size: 12px;
     stroke: #222;
     pointer-events: none;
+    user-select: none;
   }
 
   .eq-line {
     stroke: #ddd;
     fill: none;
+  }
+
+  .negative-value-divider-line {
+    stroke: #444;
+  }
+
+  .fader-divider-line {
+    stroke: rgba(222, 222, 222, 0.2);
+  }
+
+  .eq-level {
+    fill: rgba(20, 150, 200, 0.15);
   }
 }
